--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,6 +43,19 @@
     "        df = pd.read_csv(file_input,delimiter=delim,header=0)        \n",
     "        return df\n",
     "\n",
+    "def save_pairwise_rels(file_loc,g,print_option=True):\n",
+    "    f = open(file_loc,'w')\n",
+    "    nodes = g.nodes()\n",
+    "    for n1 in nodes:\n",
+    "        for n2 in nodes:\n",
+    "            if n1 is not n2:\n",
+    "                l = g.get_edge_data(n1,n2)\n",
+    "                if l:\n",
+    "                    line = str(n1) + \"\\t\" + str(n2) + \"\\t\" + str(l) + \"\\n\"\n",
+    "                    f.write(line)\n",
+    "                    if print_option:\n",
+    "                        print n1,n2,l    \n",
+    "    f.close()\n",
     "def plot_argument_graph(g):\n",
     "    A = nx.nx_agraph.to_agraph(g)\n",
     "    A.layout('dot', args='-Nfontsize=10 -Nwidth=\".2\" -Nheight=\".2\" -Nmargin=0 -Gfontsize=8')\n",
@@ -88,7 +101,7 @@
     "        print \"No extraction.\"\n",
     "        return\n",
     "    for ind,r in enumerate(rels):\n",
-    "        print \"> Extraction Number: \",ind+1, \" - \", \"Pattern: \", r[\"pattern\"],\"relation : ( \", r[\"arg1\"], \", \", r[\"rel\"], \", \", r[\"arg2\"] ,\" )\"\n",
+    "        print \">Extraction Number: \",ind+1, \" - \", \"Pattern: \", r[\"type\"],\" - relation : (\", r[\"arg1\"], \", \", r[\"rel\"], \", \", r[\"arg2\"] ,\")\"\n",
     "    print \" -------------------------------- \\n\"\n",
     "\n",
     "def get_rels_str(rels):\n",
@@ -116,7 +129,47 @@
     "    else:\n",
     "        print \"top \", top_num, \" frequent relations:\"\n",
     "        for letter,count in cnt.most_common(top_num):\n",
-    "            print letter, \": \", count        "
+    "            print letter, \": \", count     \n",
+    "            \n",
+    "def error_msg(error_type):\n",
+    "    if error_type == \"tokenizer\":\n",
+    "        return \"Tokenizer failed during parsing, Ex. there might be a dash in the sentence!\"\n",
+    "    \n",
+    "    \n",
+    "def get_entity_versions(dataset=DATA_SET):\n",
+    "    entity_versions = defaultdict(list)\n",
+    "    if dataset==\"mothering\":\n",
+    "        entity_versions['parents'] = ['parents', 'parent', 'i', 'we' , 'us', 'you']\n",
+    "        entity_versions['children'] = ['child', 'kid', 'kids', 'children', 'daughter', 'daughters',\n",
+    "                                       'son', 'sons', 'toddler',\n",
+    "                                       'toddlers', 'kiddo', 'boy','dd','ds']\n",
+    "        entity_versions['medical prof'] = ['doctor', 'doctors', 'pediatrician', \n",
+    "                                           'pediatricians', 'nurse', 'nurses', 'ped', 'md', 'dr']\n",
+    "        entity_versions['government'] = ['government', 'cdc', 'federal', 'feds',\n",
+    "                                         'center for disease control', 'officials',\n",
+    "                                         'politician', 'official', 'law']\n",
+    "        entity_versions['religous inst'] = ['faith', 'religion', 'pastor', 'pastors',\n",
+    "                                            'parish', 'parishes', 'church', 'churches',\n",
+    "                                            'congregation', 'congregations', 'clergy']\n",
+    "        entity_versions['schools'] = ['teacher', 'teachers', 'preschools', 'preschool', \n",
+    "                                      'school', 'schools', 'class', \n",
+    "                                      'daycare', 'daycares', 'classes']\n",
+    "        entity_versions['vaccines'] = ['vaccines', 'vax', 'vaccine', 'vaccination', \n",
+    "                                       'vaccinations', 'shots', 'shot', 'vaxed',\n",
+    "                                       'unvax', 'unvaxed', 'nonvaxed', 'vaccinate',\n",
+    "                                       'vaccinated', 'vaxes', 'vaxing', 'vaccinating',\n",
+    "                                       'substances', 'ingredients']\n",
+    "        entity_versions['exemptions'] = ['exemption', 'exempt']\n",
+    "        entity_versions['VPDs'] = ['varicella', 'chickenpox', \n",
+    "                                   'flu', 'whooping cough', 'tetanus', 'pertussis', \n",
+    "                                   'hepatitis', 'polio', 'mumps', 'measles', 'diphtheria']\n",
+    "        entity_versions['adverse effects'] = ['autism', 'autistic', 'fever', 'fevers',\n",
+    "                                              'reaction', 'reactions', 'infection', 'infections', 'inflammation', 'inflammations',\n",
+    "                                              'pain', 'pains', 'bleeding', 'bruising', 'diarrhea', 'diarrhoea']\n",
+    "\n",
+    "    return entity_versions\n",
+    "        \n",
+    "    "
    ]
   },
   {
