--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -13,11 +13,18 @@
     "texts = []\n",
     "\n",
     "if DATA_SET == \"twitter\":\n",
-    "    df = read_data(\"twitter\",\",\")#read the input sentences\n",
+    "    based_dir = '../data/Tweets/'\n",
+    "    file_input_name = 'sample.csv'\n",
+    "    file_input = based_dir + file_input_name      \n",
+    "    df = read_data(file_input,\"twitter\",\",\")#read the input sentences\n",
     "    texts = df['main_tweet'].tolist()\n",
     "    \n",
     "elif DATA_SET == \"mothering\":\n",
-    "    df = read_data(\"mothering\",\"\\n\")#read the input sentences\n",
+    "    based_dir = '../data/Vaccination/'\n",
+    "    file_input_name = 'sents.txt'\n",
+    "    #file_input_name = 'sent_cdb_child_exemption.txt'\n",
+    "    file_input = based_dir + file_input_name      \n",
+    "    df = read_data(file_input,\"mothering\",\"\\n\")#read the input sentences\n",
     "    texts = df['text'].tolist()"
    ]
   },
@@ -47,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
