--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -2,20 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'read_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/behnam/relation_extraction/re_behnam/parameters.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32melif\u001b[0m \u001b[0mDATA_SET\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"mothering\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"mothering\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m#read the input sentences\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[0mtexts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'text'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'read_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#from collections import Counter\n",
     "from collections import Counter\n",
     "\n",
-    "def read_data(dataset=\"twitter\", delim=\",\"):\n",
-    "    if dataset == \"twitter\":\n",
-    "        based_dir = '../data/Tweets/'\n",
-    "        file_input_name = 'sample.csv'\n",
-    "        file_input = based_dir + file_input_name        \n",
+    "def read_data(file_input,dataset=\"twitter\",delim=\",\"):\n",
+    "    if dataset == \"twitter\":      \n",
     "        ff = open(file_input)\n",
     "        h = ff.readline()\n",
     "        header_orig = h.split(delim)\n",
@@ -34,13 +43,10 @@
     "        print len(df_selected.index)\n",
     "        #print \" selected dataframe - index 0 : \", df_selected.iloc[0]\n",
     "        return df_selected\n",
-    "    if dataset == \"mothering\":\n",
-    "        based_dir = '../data/Vaccination/'\n",
-    "        file_input_name = 'sent_cdb_child_exemption.txt'\n",
-    "        file_input = based_dir + file_input_name    \n",
+    "    if dataset == \"mothering\": \n",
     "        ff = open(file_input)\n",
     "        delim='\\n'\n",
-    "        df = pd.read_csv(file_input,delimiter=delim,header=0)        \n",
+    "        df = pd.read_csv(file_input,delimiter=delim,header=0,error_bad_lines=False)        \n",
     "        return df\n",
     "\n",
     "def save_pairwise_rels(file_loc,g,print_option=True):\n",
@@ -231,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
