--- a/main_functions.ipynb
+++ b/main_functions.ipynb
@@ -352,9 +352,10 @@
     "        # lower case the letters\n",
     "        arg1_new = glob_version(row['arg1'],entity_versions)\n",
     "        arg2_new = glob_version(row['arg2'],entity_versions)\n",
-    "        row['arg1'] = arg1_new\n",
-    "        row['arg2'] = arg2_new\n",
-    "        \n",
+    "        #row['arg1'] = arg1_new\n",
+    "        #row['arg2'] = arg2_new\n",
+    "        df.loc[index,'arg1'] = arg1_new\n",
+    "        df.loc[index,'arg2'] = arg2_new    \n",
     "    return df"
    ]
   },
