data_split is updated, we separate and clean sentences and then run it on hoffman (to speed up). Cleaning part is updated: we remove most of punctuations except . , ; ' ! ?  and multiple dots is changed to a single dot.

--- a/final_version_relex/clean_separate_sentences.ipynb
+++ b/final_version_relex/clean_separate_sentences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -13,8 +13,33 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
       "10000\n",
-      "20000\n"
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "Time:  3.12724736532\n"
      ]
     },
     {
@@ -46,12 +71,12 @@
     "\n",
     "output_file = open(based_dir + \"sents_clean.txt\", \"w\")\n",
     "\n",
-    "\n",
+    "s = time.time()\n",
     "for ind, t_orig in enumerate(texts):\n",
     "    #print ind ,\n",
-    "    #if ind  >1000:\n",
+    "    #if ind  >30:\n",
     "    #    break\n",
-    "    if ind % 10000 == 0:\n",
+    "    if ind % 1000 == 0:\n",
     "        print ind\n",
     "    try:\n",
     "        t_orig = clean_sent(t_orig)\n",
@@ -65,6 +90,8 @@
     "        print \"error - index: \", ind\n",
     "        print t_orig\n",
     "    \n",
+    "e = time.time()\n",
+    "print \"Time: \", (e-s)/60.0\n",
     "output_file.close()    "
    ]
   },
