--- a/final_version_relex/filter_and_aggregate_twitter.ipynb
+++ b/final_version_relex/filter_and_aggregate_twitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -15,26 +15,24 @@
     "'''\n",
     "CONFIGURATION SETUP\n",
     "'''\n",
-    "DATA_SET = \"sentence_only\"\n",
+    "DATA_SET = \"twitter\"#\"sentence_only\"\n",
     "MAX_ITERATION = -1\n",
-    "NODE_SELECTION = False\n",
+    "NODE_SELECTION = True\n",
     "SAVE_GEFX = True\n",
     "SAVE_PAIRWISE_RELS = True\n",
     "SAVE_ALL_RELS = True\n",
     "\n",
-    "#input_file_loc = \"../../data/Vaccination/mothering_contexts/religousInst_medicalProf.csv\"\n",
-    "#input_file_loc = \"../../data/Vaccination/hoffman_output/exp_3_clean_sep/res_all_cat_clean.csv\"\n",
     "input_file_loc = \"../../data/Tweets/tweets_textOnly_relations_-1.csv\"\n",
     "output_dir = \"../../data/Tweets/aggregation_results/\"\n",
     "\n",
     "file_input_name = 'all'#'relig_med'\n",
     "\n",
-    "df_rels = read_data(input_file_loc,DATA_SET,\",\")"
+    "df_rels = read_data(input_file_loc,\"sentence_only\",\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1553,7 +1551,7 @@
        "[11027 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,15 +1562,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "PayPal {$} {0: {'label': '{sends}-1'}}\n",
+      "PayPal own custom {video} {0: {'label': '{get}-2'}}\n",
+      "PayPal similar {terms} {0: {'label': '{has}-1'}}\n",
+      "PayPal war {chest} {0: {'label': '{putting}-1'}}\n",
+      "PayPal {$} 35 {0: {'label': '{charge}-1'}}\n",
+      "PayPal the mobile wallet {game} thrones {0: {'label': 'still {winning}-2'}}\n",
+      "PayPal {_} {0: {'label': 'currently {welcome}-1'}}\n",
+      "PayPal the {merchant} {0: {'label': 'Essentially has {created}-1'}}\n",
+      "PayPal {$} 35 crazy {0: {'label': '{charge}-1'}}\n",
+      "PayPal tributes {pigs} {0: {'label': '{needs}-2'}}\n",
+      "PayPal nude selfie {scandal} {0: {'label': '{uses}-1'}}\n",
+      "PayPal million new {accounts} {0: {'label': '{added}-1'}}\n",
+      "PayPal mobile payment {apps} {0: {'label': 'Just when off could {kill} off-5'}}\n",
+      "{it} PayPal {0: {'label': '{Fill} up-4'}}\n",
+      "maybe {apple} PayPal {0: {'label': '{adds}-2'}}\n",
+      "apple {music} HSBC {0: {'label': '{enters}-43'}}\n",
+      "Amex payments {sys} {0: {'label': '{hopes}-2'}}\n",
+      "Amex new {mobile} {0: {'label': '{hopes}-1'}}\n",
+      "Amex new mobile {payments} {0: {'label': '{hopes}-4'}}\n",
+      "Amex apple {pay} {0: {'label': '{updates}-13'}, 1: {'label': '{supports}-1'}}\n",
+      "Amex fast digital {checkouts} {0: {'label': '{launches}-54'}}\n",
+      "Amex new mobile {payment} {0: {'label': '{hopes}-2'}}\n",
+      "Amex {sys} {0: {'label': '{hopes}-4'}}\n",
+      "Amex new mobile {pa.} {0: {'label': '{hopes}-1'}}\n",
+      "Amex {express} {0: {'label': 'just {launched}-2'}}\n",
+      "Amex new mobile {pay} {0: {'label': '{hopes}-1'}}\n",
+      "a {book} PayPal {0: {'label': '{takes}-2'}, 1: {'label': '{allows}-1'}}\n",
+      "Starbucks apple {pay} {0: {'label': '{praises}-1'}}\n",
+      "Starbucks the insecure mobile {payment} {0: {'label': 'seriously {has}-1'}}\n",
+      "{i} PayPal {0: {'label': '{got}-5'}, 1: {'label': 'can {do}-1'}, 2: {'label': \"'ll {take}-1\"}, 3: {'label': 'once {get}-1'}, 4: {'label': '{accept}-1'}, 5: {'label': '{have}-1'}}\n",
+      "{i} Starbucks {0: {'label': 'really {wanted}-1'}, 1: {'label': '{need}-1'}}\n",
+      "{you} Barclays {0: {'label': '{mean}-1'}}\n",
+      "apple {pay} PayPal {0: {'label': 'is {beating}-1'}}\n",
+      "apple {pay} HSBC {0: {'label': '{enters}-43'}}\n",
+      "HSBC {what} {0: {'label': '{TOLD}-1'}}\n",
+      "HSBC {me} {0: {'label': '{TOLD}-1'}}\n",
+      "Barclays three bpay {devices} {0: {'label': '{announces}-2'}}\n",
+      "Barclays {'t} one partners {0: {'label': '{aren}-1'}}\n",
+      "Barclays bpay {solution} {0: {'label': 'are {flogging}-1'}}\n",
+      "Barclays {it} {0: {'label': '{going} alone-1'}, 1: {'label': 'to {support}-1'}}\n",
+      "Barclays {zapp} not {0: {'label': '{joins}-1'}}\n",
+      "Barclays good {reasons} do {0: {'label': '{have}-1'}}\n",
+      "Barclays {zapp} {0: {'label': '{joins}-81'}, 1: {'label': '{uses}-1'}}\n",
+      "Barclays applepay {wallet} {0: {'label': 'to {support}-1'}}\n",
+      "Barclays {brand} {0: {'label': '{screwed} up-3'}}\n",
+      "Barclays 2 key {entrants} {0: {'label': '{joins}-1'}}\n",
+      "Barclays {_} {0: {'label': 'will {get} applepay now-2'}}\n",
+      "Barclays the {battle} {0: {'label': 'have {lost}-1'}}\n",
+      "Barclays {apple} {0: {'label': '{support}-1'}}\n",
+      "Barclays apple {pay} {0: {'label': 'to {support}-32'}, 1: {'label': 'are not {doing}-12'}, 2: {'label': '{shuns}-10'}, 3: {'label': '{attacks}-9'}, 4: {'label': '{delays}-6'}, 5: {'label': '{support}-2'}, 6: {'label': 'Is {Delaying}-2'}, 7: {'label': 'not {supporting}-1'}, 8: {'label': 'do not {support}-1'}, 9: {'label': 'are not {implementing}-1'}, 10: {'label': '{supporting}-1'}, 11: {'label': '{shun}-1'}, 12: {'label': 'how {supports}-1'}, 13: {'label': 'not to {join}-1'}}\n",
+      "Barclays contactless {solution} {0: {'label': '{launches}-1'}}\n",
+      "Barclays a {deal} {0: {'label': 'has {signed}-2'}}\n",
+      "Barclays standard nfc payments {tech} {0: {'label': 'to {adopt}-1'}}\n",
+      "Barclays {pingit} {0: {'label': '{uses}-1'}}\n",
+      "Barclays various innovative digital smart {pay} {0: {'label': '{introduces}-1'}}\n",
+      "Barclays {applepay} {0: {'label': '{attacks}-3'}, 1: {'label': 'just {want}-1'}, 2: {'label': 'now hopefully will {have}-1'}}\n",
+      "Barclays the {decision} support {0: {'label': 'when will {review}-1'}}\n",
+      "Barclays {it.} {0: {'label': 'are not {supporting}-2'}}\n",
+      "Barclays new {ways} {0: {'label': '{offers}-2'}}\n",
+      "Barclays {customers} {0: {'label': 'should be {giving}-1'}}\n",
+      "Barclays the {rank} {0: {'label': 'has {joined}-4'}}\n",
       "E4i The {Future} Payments {Fingerprint} {0: {'label': '{Awaits}-1'}}\n",
       "International mobile payment {service.} the {team} {0: {'label': '{Join} too-1'}}\n",
       "MTN {Swaziland} Ericsson Mobile {Wallet} {0: {'label': '{Deploys}-1'}}\n",
@@ -4351,7 +4411,7 @@
     "    entity_versions = get_entity_versions(DATA_SET)    \n",
     "    df_simp = get_simp_df(df_rels.copy(),entity_versions)  \n",
     "    selected_nodes = entity_versions.keys()\n",
-    "    df_rels_selected = filter_nodes(df_simp.copy(),source='arg1',target='arg2',selected_nodes = selected_nodes)\n",
+    "    df_rels_selected = filter_nodes_OR(df_simp.copy(),source='arg1',target='arg2',selected_nodes = selected_nodes)\n",
     "    g_arg = create_argument_multiGraph(df_rels_selected.copy(),source='arg1',target='arg2',edge_attr = 'rel')\n",
     "    if SAVE_GEFX:\n",
     "        nx.write_gexf(g_arg, output_dir + file_input_name + \"_\" + \"g_arg_selected_\"+str(MAX_ITERATION)+\"_\"+str(time.time())+\".gexf\")\n",
@@ -4375,7 +4435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -4386,7 +4446,7 @@
        "4"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4394,6 +4454,93 @@
    "source": [
     "2+2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>arg1</th>\n",
+       "      <th>rel</th>\n",
+       "      <th>arg2</th>\n",
+       "      <th>type</th>\n",
+       "      <th>pattern</th>\n",
+       "      <th>arg1_with_pos</th>\n",
+       "      <th>rel_with_pos</th>\n",
+       "      <th>arg2_with_pos</th>\n",
+       "      <th>arg1_prepositions</th>\n",
+       "      <th>rel_prepositions</th>\n",
+       "      <th>arg2_prepositions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9645</th>\n",
+       "      <td>Will Apple Pay take over PayPal? Will PayPal B...</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>{take} over</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>SVO</td>\n",
+       "      <td>(nsubj, verb, dobj)</td>\n",
+       "      <td>PayPal-NNP-9</td>\n",
+       "      <td>take-VB-4 over-RP-5</td>\n",
+       "      <td>PayPal-NNP-6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               sentence    arg1          rel  \\\n",
+       "9645  Will Apple Pay take over PayPal? Will PayPal B...  PayPal  {take} over   \n",
+       "\n",
+       "        arg2 type              pattern arg1_with_pos         rel_with_pos  \\\n",
+       "9645  PayPal  SVO  (nsubj, verb, dobj)  PayPal-NNP-9  take-VB-4 over-RP-5   \n",
+       "\n",
+       "     arg2_with_pos arg1_prepositions rel_prepositions arg2_prepositions  \n",
+       "9645  PayPal-NNP-6               NaN              NaN               NaN  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_rels_selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
